--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "repository": {},
   "license": "UNLICENSED",
   "dependencies": {
+    "@remotion/bundler": "^4.0.128",
     "@remotion/cli": "4.0.128",
+    "@remotion/renderer": "^4.0.128",
     "@remotion/zod-types": "4.0.128",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -24,6 +26,7 @@
     "@types/web": "^0.0.86",
     "eslint": "^8.43.0",
     "prettier": "^2.8.8",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.4"
   },
   "packageManager": "pnpm@8.14.0"
